# cerul-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: codex-review.yml  publish.yml
cerul/: __init__.py  client.py  errors.py  types.py
tests/: test_client.py
