[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "cerul"
version = "0.0.1"
description = "Official Python SDK for the Cerul video search API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = ["httpx>=0.27,<1"]
keywords = ["cerul", "video-search", "ai-agent", "api", "mcp", "video"]
authors = [{ name = "Cerul" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]

[project.optional-dependencies]
dev = ["build>=1.2.2"]

[project.urls]
Homepage = "https://cerul.ai"
Documentation = "https://cerul.ai/docs"
Repository = "https://github.com/cerul-ai/cerul-python"
Issues = "https://github.com/cerul-ai/cerul-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["cerul"]
